CHANGES.txt - 2007-07-24
------------------------

CHANGES IN CUPS V1.3rc1

	- The web interface now pulls the default cupsd.conf file
	  from cupsd.conf.default in the CUPS config directory.
	- Added a help file for using Kerberos with CUPS.
	- The scheduler now strips the "@KDC" portion of Kerberos
	  usernames since those usernames typically do not appear in
	  the group membership lists used by CUPS.
	- cupsMarkOptions() could (incorrectly) leave multiple option
	  choices marked.
	- Backends could (incorrectly) run as root during discovery
	  (STR #2454)
	- Avahi is now supported for DNS-SD (Bonjour) printer sharing
	  (STR #2455)
	- The default cupsd.conf file had typos and old operation names
	  (STR #2450)
	- The scheduler now erases authentication cache files using the
	  7-pass US DoD algorithm.
	- Delegated Kerberos credentials (proxy authentication) did not
	  work.
	- The filter makefile did not optimize the libcupsimage.2.dylib
	  with a sectorder file.
	- The IPP backend incorrectly wrote an empty printer message
	  when processing the "none" state reason.
	- The USB backend could deadlock on Mac OS X while performing
	  a side-channel command.
	- The scheduler did not prevent remote queues from being
	  shared/published.
	- The scheduler did not remove the temporary request file on
	  authentication errors.
	- ppdLocalizeIPPReason() did not handle "scheme:" schemes or
	  "file" URLs.
	- ppdLocalizeIPPReason() was not exported on Mac OS X.


CHANGES IN CUPS V1.3b1

	- Copyright updates - CUPS is now owned by Apple Inc.
	- Documentation updates (STR #1775, STR #2027, STR #2130,
	  STR #2131, STR #2263, STR #2356, STR #2397)
	- Added new cupsfilter utility (STR #1734)
	- Added new job-printer-state-message and
	  job-printer-state-reasons attributes to jobs (STR #2418)
	- Added LDAP+SSL support (STR #1967)
	- CUPS now supports authentication via peer credentials
	  over domain sockets (STR #2242, STR #2277)