@@ -67,30 +67,38 @@ trying to use the new policy.</P>
  7    
  8      # All administration operations require an administrator
       to authenticate...
- 9      &lt;Limit Pause-Printer Resume-Printer
-      Set-Printer-Attributes Enable-Printer Disable-Printer
-      Pause-Printer-After-Current-Job Hold-New-Jobs
-      Release-Held-New-Jobs Deactivate-Printer Activate-Printer
-      Restart-Printer Shutdown-Printer Startup-Printer
-      Promote-Job Schedule-Job-After CUPS-Add-Printer
-      CUPS-Delete-Printer CUPS-Add-Class CUPS-Delete-Class
-      CUPS-Accept-Jobs CUPS-Reject-Jobs CUPS-Set-Default>
+ 9      &lt;Limit CUPS-Add-Printer CUPS-Delete-Printer CUPS-Add-Class
+      CUPS-Delete-Class CUPS-Set-Default>
 10        AuthType Default
 11        Require user @SYSTEM
 12        Order deny,allow
 13      &lt;/Limit>
 14    
-15      # Only the owner or an administrator can cancel or
+15      # All printer operations require a printer operator
+      to authenticate...
+16      &lt;Limit Pause-Printer Resume-Printer
+      Set-Printer-Attributes Enable-Printer Disable-Printer
+      Pause-Printer-After-Current-Job Hold-New-Jobs
+      Release-Held-New-Jobs Deactivate-Printer Activate-Printer
+      Restart-Printer Shutdown-Printer Startup-Printer
+      Promote-Job Schedule-Job-After CUPS-Accept-Jobs
+      CUPS-Reject-Jobs>
+17        AuthType Default
+18        Require user <em>varies by OS</em>
+19        Order deny,allow
+20      &lt;/Limit>
+21    
+22      # Only the owner or an administrator can cancel or
       authenticate a job...
-16      &lt;Limit Cancel-Job CUPS-Authenticate-Job>
-17        Require user @OWNER @SYSTEM
-18        Order deny,allow
-19      &lt;/Limit>
-20    
-21      &lt;Limit All>
-22        Order deny,allow
-23      &lt;/Limit>
-24    &lt;/Policy>
+23      &lt;Limit Cancel-Job CUPS-Authenticate-Job>
+24        Require user @OWNER @SYSTEM
+25        Order deny,allow
+26      &lt;/Limit>
+27    
+28      &lt;Limit All>
+29        Order deny,allow
+30      &lt;/Limit>
+31    &lt;/Policy>
 </PRE>
 
 <H3>The Default CUPS Operation Policy</H3>
@@ -139,18 +147,26 @@ however, <em>do</em> use the <TT>AuthType</TT> directive, and so
 administrative operations need to be authenticated:</P>
 
 <PRE CLASS="command">
- 9      &lt;Limit Pause-Printer Resume-Printer
-      Set-Printer-Attributes Enable-Printer Disable-Printer
-      Pause-Printer-After-Current-Job Hold-New-Jobs
-      Release-Held-New-Jobs Deactivate-Printer Activate-Printer
-      Restart-Printer Shutdown-Printer Startup-Printer
-      Promote-Job Schedule-Job-After CUPS-Add-Printer
-      CUPS-Delete-Printer CUPS-Add-Class CUPS-Delete-Class
-      CUPS-Accept-Jobs CUPS-Reject-Jobs CUPS-Set-Default>
+ 9      &lt;Limit CUPS-Add-Printer CUPS-Delete-Printer CUPS-Add-Class
+      CUPS-Delete-Class CUPS-Set-Default>
 10        AuthType Default
 11        Require user @SYSTEM
 12        Order deny,allow
 13      &lt;/Limit>
+14    
+15      # All printer operations require a printer operator
+      to authenticate...
+16      &lt;Limit Pause-Printer Resume-Printer
+      Set-Printer-Attributes Enable-Printer Disable-Printer
+      Pause-Printer-After-Current-Job Hold-New-Jobs
+      Release-Held-New-Jobs Deactivate-Printer Activate-Printer
+      Restart-Printer Shutdown-Printer Startup-Printer
+      Promote-Job Schedule-Job-After CUPS-Accept-Jobs
+      CUPS-Reject-Jobs>
+17        AuthType Default
+18        Require user <em>varies by OS</em>
+19        Order deny,allow
+20      &lt;/Limit>
 </PRE>
 
 <P>The "Order deny,allow" line at the end of both <TT>Limit</TT>
